# pxr-vt

./: CMakeLists.txt  README.md  array.h  arrayEdit.cpp  arrayEdit.h  arrayEditBuilder.cpp  arrayEditBuilder.h  arrayEditOps.cpp  arrayEditOps.h  debugCodes.cpp  dictionary.cpp  pch.h  pyproject-dev.toml  pyproject.toml  value.h  wrapArrayDualQuaternion.cpp  wrapArrayEdit.h  wrapArrayFloat.cpp  wrapArrayIntegral.cpp  wrapArrayMatrix.cpp  wrapArrayQuaternion.cpp  wrapArrayRange.cpp  wrapArrayString.cpp  wrapArrayToken.cpp  wrapArrayVec.cpp
.github/actions/building-deps/: action.yml
.github/workflows/: linux.yml  macos.yml  pypi.yml  windows.yml
cmake/: pxr-vt-config.cmake.in
src/: CMakeLists.txt
src/pxr/vt/: CMakeLists.txt  api.h  array.cpp  array.h  arrayEdit.cpp  arrayEdit.h  arrayEditBuilder.cpp  arrayEditBuilder.h  arrayEditOps.cpp  arrayEditOps.h  arrayPyBuffer.cpp  arrayPyBuffer.h  debugCodes.cpp  debugCodes.h  dictionary.cpp  dictionary.h  hash.cpp  hash.h  moduleDeps.cpp  pch.h  pxr.h.in  pyOperators.h  streamOut.cpp  streamOut.h  traits.h  typeHeaders.h  types.cpp  types.h  value.cpp  value.h  valueFromPython.cpp  valueFromPython.h  visitValue.h  wrapArray.cpp  wrapArray.h  wrapArrayEdit.h
src/python/: CMakeLists.txt  __init__.py  module.cpp  wrapArrayBase.cpp  wrapArrayDualQuaternion.cpp  wrapArrayFloat.cpp  wrapArrayIntegral.cpp  wrapArrayMatrix.cpp  wrapArrayQuaternion.cpp  wrapArrayRange.cpp  wrapArrayString.cpp  wrapArrayToken.cpp  wrapArrayVec.cpp  wrapDictionary.cpp  wrapValue.cpp
test/: CMakeLists.txt  testVtArrayEdit.cpp  testVtArrayEdit.py  testVtCpp.cpp  test_VtArray.py  test_VtValue.py
testenv/: testVtArrayEdit.cpp  testVtArrayEdit.py  testVtCpp.cpp
