[build-system]
requires = [
    "scikit-build-core",
    "pxr-arch-dev==25.5.1.*",
    "pxr-tf-dev==25.5.1.*",
    "pxr-gf-dev==25.5.1.*",
    "pxr-trace-dev==25.5.1.*",
    "pxr-boost-dev==25.5.1.*",
    "pxr-tbb-dev==2022.1.0.*"
]
build-backend = "scikit_build_core.build"

[project]
name = "pxr-vt"
version = "25.5.1"
description = "Generic type value library used in OpenUSD"
readme = "README.md"
requires-python = ">=3.8"
license-files = ["LICENSE.txt", "NOTICE.txt"]
keywords = ["pixar", "open-usd"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
]
dependencies = [
    "pxr-arch==25.5.1.*",
    "pxr-tf==25.5.1.*",
    "pxr-gf==25.5.1.*",
    "pxr-trace==25.5.1.*",
    "pxr-boost==25.5.1.*",
    "pxr-tbb==2022.1.0.*"
]

[project.urls]
Repository = "https://github.com/untwine/pxr-vt"

[tool.scikit-build]
cmake.version = ">=3.21,<4"
cmake.args = [
    "-DBUILD_TESTS=OFF",
    "-DBUILD_SHARED_LIBS=ON",
    "-DBUILD_PYTHON_BINDINGS=ON",
    "-DCMAKE_INSTALL_LIBDIR=pxr/.libs",
    "-DCMAKE_INSTALL_INCLUDEDIR=pxr-vt/include",
    "-DCMAKE_INSTALL_DATAROOTDIR=pxr-vt",
    "-DCMAKE_INSTALL_PYTHON_LIBDIR=.",

    # Use 10.13 as minimum macOS version to allow std::optional::value() usage
    "-DCMAKE_OSX_DEPLOYMENT_TARGET=10.13"
]
wheel.exclude = ["pxr-vt"]
sdist.exclude = ["test", ".github"]
